Upload Final Thesis

--- a/LateX/tesi/tesi.tex
+++ b/LateX/tesi/tesi.tex
@@ -83,6 +83,8 @@ tabsize=4, % Number of spaces per tab in the code
 \usepackage{verbatim}
 \usepackage{caption}
 \usepackage[font=small,labelfont=bf]{caption}
+\usepackage{pdf14}
+\usepackage[a-1a]{pdfx}
 \usepackage[pdfa]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{Tesi di laurea triennale di Eleonora Gatti}
